kubernetes/apps/kubeflow/core/argo-workflows/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
  hostnames:
    - argo.goyangi.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-workflows-server
          port: 2746
